Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.bib
+++ b/FACTIUNN.bib
@@ -115,7 +115,7 @@
   author = {Colling, Bethany and Batistoni, P. and Bradnam, S.C. and Ghani, Z. and Gilbert, M.R. and Nobs, C.R. and Packer, L.W. and Pillon, M. and Popovichev, S.},
   keywords = {Jet ; Iter ; Tbm ; Activation ; Neutronics},
 }
-@online{AndrewNgNormalization,
+@online{AndrewNgNormalisation,
   title={Normalizing Inputs (C2W1L09)},
   url={https://www.youtube.com/watch?v=FDCfw-YqWTE},
   urldate={30/06/2019},
@@ -233,7 +233,7 @@ keywords = {Spectrum Unfolding ; Genetic Algorithm ; Monte Carlo Simulation ; Ne
   year={1969},
   publisher={Springer}
 }
-@article{FisherRegularization,
+@article{FisherRegularisation,
   title={Unfolding of neutron energy spectra with fisher regularisation},
   author={Dehimi, Fatma Zohra and Seghour, Abdeslam and Abaidia, Saddik El Hak},
   journal={IEEE Transactions on Nuclear Science},
@@ -523,7 +523,7 @@ author = {Hosseini, Seyed Abolfazl},
 keywords = {Neutron Pulse Height Distribution ; Mcnpx-Esut ; 252 Cf ; 241 Am- 9 Be ; Unfolding ; Ann ; Mlsqr},
 }
 
-@article{OptimizationStudyOnNeutronSpec,
+@article{OptimisationStudyOnNeutronSpec,
 issn = {1001-8042},
 abstract = {The response functions and pulse height spectrum (PHS) of a 2″ × 2″ BC501A detector were obtained through a general-purpose Monte Carlo simulation toolkit, Geant4. A relatively simple but effective method was adopted to unfold the PHS. Recommendations regarding the response matrix were proposed to optimize the unfolding results. The results indicate that the accuracy of the unfolding can be greatly improved using many incident neutrons with a wide energy range, a proper energy interval, and an appropriate channel width of the response matrix. The above-mentioned method was verified by unfolding three different types of simulated spectrum, the results of which are in good accord with the simulated distribution.},
 journal = {Nuclear Science and Techniques},
